Use more lombok